Infra/devops/argocd/network-middleware.yaml
#apiVersion: traefik.io/v1alpha1
#kind: Middleware
#metadata:
#  name: res-compression
#  namespace: roundy-app
#spec:
#  compress: {}

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: res-browser-cache
  namespace: roundy-app
spec:
  headers:
    customResponseHeaders:
      Cache-Control: "public, max-age=604800, must-revalidate"
