Infra/devops/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: roundy-app-ingress
  namespace: roundy-app
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: "letsencrypt-cert"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: roundy-app-minio-strip-prefix@kubernetescrd
spec:
  tls:
    - hosts:
      - i14a701.p.ssafy.io
      secretName: tls-cert
  rules:
  - host: i14a701.p.ssafy.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: roundy-frontend-svc
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: roundy-backend-svc
            port:
              number: 8080
      - path: /minio-api
        pathType: Prefix
        backend:
          service:
            name: minio-svc
            port:
              number: 8887
      - path: /minio-console
        pathType: Prefix
        backend:
          service:
            name: minio-svc
            port:
              number: 8886
